[gd_scene load_steps=31 format=3 uid="uid://bg3270mn7jlyg"]

[ext_resource type="Script" uid="uid://dtusbcgl0relc" path="res://enemy.gd" id="1_qi2p4"]
[ext_resource type="Texture2D" uid="uid://gvecvf12bpts" path="res://Assets/Units/Red Units/Warrior/Warrior_Attack1.png" id="2_epg4t"]
[ext_resource type="Texture2D" uid="uid://c3ec7y6s8x7uu" path="res://Assets/Units/Black Units/Warrior/Warrior_Idle.png" id="2_iifgy"]
[ext_resource type="Texture2D" uid="uid://dsu3qn78loeru" path="res://Assets/Units/Black Units/Warrior/Warrior_Run.png" id="3_epg4t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8q82m"]
atlas = ExtResource("2_epg4t")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_epc7x"]
atlas = ExtResource("2_epg4t")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7rgc"]
atlas = ExtResource("2_epg4t")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdav3"]
atlas = ExtResource("2_epg4t")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yqyl"]
atlas = ExtResource("2_iifgy")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wujgv"]
atlas = ExtResource("2_iifgy")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb8ge"]
atlas = ExtResource("2_iifgy")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1ltt"]
atlas = ExtResource("2_iifgy")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxifv"]
atlas = ExtResource("2_iifgy")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwjut"]
atlas = ExtResource("2_iifgy")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0g06"]
atlas = ExtResource("2_iifgy")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar8e5"]
atlas = ExtResource("2_iifgy")
region = Rect2(1344, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_doop2"]
atlas = ExtResource("3_epg4t")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hcft"]
atlas = ExtResource("3_epg4t")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnovl"]
atlas = ExtResource("3_epg4t")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmwgi"]
atlas = ExtResource("3_epg4t")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2u8i"]
atlas = ExtResource("3_epg4t")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_otto8"]
atlas = ExtResource("3_epg4t")
region = Rect2(960, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_8q82m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q82m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epc7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7rgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdav3")
}],
"loop": true,
"name": &"ATTACK",
"speed": 7.0
}, {
"frames": [],
"loop": true,
"name": &"DIE",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yqyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wujgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb8ge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1ltt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxifv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwjut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0g06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar8e5")
}],
"loop": true,
"name": &"IDLE",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_doop2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hcft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnovl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmwgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2u8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otto8")
}],
"loop": true,
"name": &"RUN",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qi2p4"]
size = Vector2(11, 7)

[sub_resource type="CircleShape2D" id="CircleShape2D_iifgy"]
radius = 80.0062

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jpbtr"]
size = Vector2(35, 29)

[sub_resource type="Animation" id="Animation_qgdfx"]
resource_name = "Attack"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyHitbox/CollisionShape2D:shape")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"ATTACK"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EnemyHitbox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4.5, 2.5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("EnemyHitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.199649, 0.322123),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_qku5p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"ATTACK"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemyHitbox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4.5, 2.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EnemyHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l1fjw"]
_data = {
&"Attack": SubResource("Animation_qgdfx"),
&"RESET": SubResource("Animation_qku5p")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b5wqg"]
size = Vector2(45, 29)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_qi2p4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_8q82m")
animation = &"ATTACK"
autoplay = "IDLE"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 6.5)
shape = SubResource("RectangleShape2D_qi2p4")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_iifgy")

[node name="EnemyHitbox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitbox"]
position = Vector2(4.5, 2.5)
shape = SubResource("RectangleShape2D_jpbtr")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_l1fjw")
}

[node name="AttackRange" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
position = Vector2(-0.5, 2.5)
shape = SubResource("RectangleShape2D_b5wqg")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_shape_exited" from="DetectionArea" to="." method="_on_detection_area_body_shape_exited"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
